--- a/sample-spring-boot-echo/build.gradle
+++ b/sample-spring-boot-echo/build.gradle
@@ -18,4 +18,5 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
     compile project(':line-bot-spring-boot')
+	compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
 }
